tests/ui/derive_zero_variant_enum.stderr
error: DefaultGenerator cannot be derived for enums with no variants: there is no value to generate
 --> tests/ui/derive_zero_variant_enum.rs:5:6
  |
5 | enum Void {}
  |      ^^^^
